# zotero_to_file_tree

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  ReadMe.md  build.bat  build.sh  cleanup_run.bat  cleanup_run.sh  compile_commands.json  test_install.bat
.github/workflows/: linux.yml  macos.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark_example_library.cpp
cmake/: Warnings.cmake  sccache_setup.cmake  set_target_inheritance_property.cmake  setup_export_set_installation.cmake  static_analysis.cmake  warnings.cmake
dependencies/: CMakeLists.txt
dependencies/cli11/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/sqlitecpp/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/zotero_to_file_tree_src/: CMakeLists.txt  CollectionTree.cpp  CollectionTree.h  ErrorCodes.cpp  ErrorCodes.hpp  PDFAttachment.h  PDFItem.h  PDFItem.hpp  SqlStatements.cpp  SqlStatements.h  ZoteroCollection.h  ZoteroDB.cpp  ZoteroDB.h  ZoteroDB.hpp  ZoteroPDFAttachment.h  ZoteroToFileTree.cpp  ZoteroToFileTree.h  ZoteroToFileTree.hpp  ZoteroToFileTreeCli.cpp  main.cpp  mainpage.hpp  zotero_to_file_tree.cpp
test/: CMakeLists.txt  TestResources.cpp  TestResources.h  testExampleDB.cpp
test/test_install/: CMakeLists.txt
test/test_install/template_find_package_install_test/: CMakeLists.txt  CMakePresets.json  main.cpp
test/test_install/template_find_package_install_test/cmake/: Warnings.cmake  project_preamble.cmake  template_find_package_install_testConfig.in
test/using_google_test/: CMakeLists.txt  google_test_usage.cpp
test/zotero_example_db/storage/2AQ92AS2/: .zotero-ft-cache
test/zotero_example_db/storage/4WJP46FK/: .zotero-ft-cache  .zotero-ft-info
test/zotero_example_db/storage/9TKS7AWI/: vulkan.lunarg.com.html
test/zotero_example_db_depr/storage/KZL8QTC3/: .zotero-ft-cache  .zotero-ft-info
test/zotero_example_db_depr/storage/LGGDPDFX/: .zotero-ft-cache  tiny-metaprogramming-library.html
